<resources>
    <string name="app_name">FunSDKDemo</string>
    <string name="app_welcome">Welcome to Demo for FunSDK!\n©2016, Powered by XiongMai.</string>
    <string name="common_confirm">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_skip">Skip</string>
    <string name="common_delete">Delete</string>
    <string name="common_correct">Correct</string>
    <string name="common_retry">Retry</string>
    <string name="guide_module_title_user">1. User</string>
    <string name="guide_module_title_user_register">1.1 Register</string>
    <string name="guide_module_title_user_login">1.2 Login</string>
    <string name="guide_module_title_user_change_passwd">1.3 Modify password</string>
    <string name="guide_module_title_user_forgot_passwd">1.4 Forgot password</string>
    <string name="guide_module_title_user_info">1.5 User info</string>
    <string name="guide_module_title_user_debug">1.6 Save Device Password Native</string>
    <string name="guide_module_title_device">2. Device</string>
    <string name="guide_module_title_device_sn">2.1 Connect(Serial number)</string>
    <string name="guide_module_title_device_ap">2.2 Device List (Near AP)</string>
    <string name="guide_module_title_device_lan">2.3 Device List (Ethernet)</string>
    <string name="guide_module_title_device_add">2.4 Add device by user</string>
    <string name="guide_module_title_device_remove">2.5 Delete device by user</string>
    <string name="guide_module_title_device_config">2.6 Device Config</string>
    <string name="guide_module_title_device_connect2">"2.7 Device List (User's)"</string>
    <string name="guide_module_title_device_browse">2.8 Browse Files</string>
    <string name="guide_module_title_device_alarm">2.9 Device Alarm</string>
    <string name="guide_module_title_device_setwifi">2.10 WiFi configuration</string>
    <string name="guide_module_title_media">3. Media</string>
    <string name="guide_module_title_media_play_live">3.1 Play live video</string>
    <string name="guide_module_title_media_play_record">3.2 Play remote record</string>
    <string name="guide_module_title_media_play_record_bytime">3.3 Play remote record -time</string>
    <string name="guide_module_title_media_play_local">3.4 Play local video</string>
    <string name="guide_module_title_media_play_cloud">3.5 Play remote video</string>
    <string name="guide_module_title_media_play_control">3.6 Control(Pause/Resume..)</string>
    <string name="guide_module_title_media_record_control">3.7 Record Control</string>
    <string name="guide_module_title_media_capture">3.8 Video Capture</string>
    <string name="guide_module_title_trancode">4. Transcoding</string>
    <string name="guide_module_title_trancode_jpeg2mp4">4.1 JPEG transcode to MP4</string>
    <string name="guide_module_title_about">5. About Demo</string>
    <string name="guide_module_desc_user">"Register/Login/Modify user info/Forgot password"</string>
    <string name="guide_module_desc_device">"Device management/Configure/Connect/Files/Alarm"</string>
    <string name="guide_module_desc_media">"Play remote video/local video/Capture"</string>
    <string name="guide_module_desc_trancode">"JPEG transcode to MP4"</string>
    <string name="guide_module_desc_about">"Version infomation"</string>
    <string name="guide_module_media_remote_video">"Please login device first!!"</string>
    <string name="user_not_login">not login</string>
    <string name="user_name_repeat_btn">repeat</string>
    <string name="user_login_hint_username">User name/Phone number</string>
    <string name="user_login_hint_password">Password</string>
    <string name="user_login_forgot_passwd">Forgot password?</string>
    <string name="user_login">Login</string>
    <string name="user_login_save_password">Save password</string>
    <string name="user_login_auto_login">Auto login</string>
    <string name="user_login_otherway">You also can login by following way</string>
    <string name="user_login_byweibo">Login by Micro-blog Sina</string>
    <string name="user_login_byqq">Login by QQ</string>
    <string name="user_login_noaccount">No account?</string>
    <string name="user_login_register">Register</string>
    <string name="user_login_error_emptyusername">Empty username</string>
    <string name="user_login_error_email">Email Error</string>
    <string name="user_login_error_emptypassword">Empty password</string>
    <string name="user_login_error_emptyverifycode">Empty Verification Code</string>
    <string name="user_login_error_phone_number">Phone Number Error</string>
    <string name="user_logout">Logout</string>
    <string name="user_logout_not_login">Please Login First</string>
    <string name="user_change_password">Change</string>
    <string name="user_change_password_hint_username">Username</string>
    <string name="user_change_password_hint_old_password">Old password</string>
    <string name="user_change_password_hint_new_password">6-16number/letters/symbol</string>
    <string name="user_change_password_hint_new_password_confirm">Confirm New Password</string>
    <string name="user_change_password_sucess">Change password success, please login again.</string>
    <string name="user_change_password_error_emptyusername">Username can not be empty</string>
    <string name="user_change_password_error_emptypassw">Password can not be empty</string>
    <string name="user_change_password_error_passwtooshort">Password error format</string>
    <string name="user_change_password_error_passwnotequal">Twice passwords are different</string>
    <string name="user_register_by_email">By Email</string>
    <string name="user_register_by_cellphone">By Mobile Phone</string>
    <string name="user_register_account">Register</string>
    <string name="user_register_error_password_unmatched">Twice passwords are different</string>
    <string name="user_register_error_username_length">Username too short</string>
    <string name="user_register_error_password_length">Password too short</string>
    <string name="user_register_hint_username">"At least 6 letters/number/symbol"</string>
    <string name="user_register_hint_email">"Enter E-mail for retrieving password"</string>
    <string name="user_register_hint_phone">"Enter 11 phone number"</string>
    <string name="user_register_hint_verify_code">"Enter Verification Code "</string>
    <string name="user_register_hint_password">"8-16 number/letters/symbol"</string>
    <string name="user_register_hint_password_confirm">Enter password again</string>
    <string name="user_registering">Registering...</string>
    <string name="user_register_success">Register success, Logining...</string>
    <string name="user_register_login_success">Login success</string>
    <string name="user_input_preset_number">Please enter the preset point number you want to set.</string>
    <string name="user_input_preset_number_warn">Please enter the preset point number less than 200</string>
    <string name="user_select_preset">Please select the preset point</string>
    <string name="user_set_preset_succeed">Set Success</string>
    <string name="user_set_preset_fail">Set failed</string>
    <string name="user_set_debug_set">Local password settings </string>
    <string name="user_set_debug_info">Here to choose whether to use the local password save function (be used next boot), if the use of the function, is myapplication class initialization settings save path, each landing device successfully save password settings. If you want to access local password can call FunSDK.DevGetLocalPwd () interface</string>
    <string name="user_register_china">China +86</string>
    <string name="user_register_get_verify_code">Click</string>
    <string name="device_camera_channels_preview">Channels Preview：</string>
    <string name="device_camera_channels_preview_title">Channels Preview</string>
    <string name="device_login">Device Login</string>
    <string name="device_login_sn">Serial Number</string>
    <string name="device_login_ip">IP</string>
    <string name="device_login_name_hint">Login name</string>
    <string name="Enter_Device_Port">Device Port</string>
    <string name="device_login_password_hint">Login password</string>
    <string name="device_login_error_sn">The serial number is not correct</string>
    <string name="device_login_input_password">Please enter the device password</string>
    <string name="device_get_status_success">Obtain device status successfully</string>
    <string name="device_request_status">Querying device status</string>
    <string name="device_request_system_info">Obtaining device status</string>
    <string name="device_list_for_user">Devices of %s</string>
    <string name="device_list_nearby">Nearby AP Devices</string>
    <string name="device_list_lan">Device under LAN</string>
    <string name="device_type">Type:</string>
    <string name="device_mac">MAC:</string>
    <string name="device_sn">SN:</string>
    <string name="device_ip">IP:</string>
    <string name="device_staus_more">Status:</string>
    <string name="device_login_name">Login name:</string>
    <string name="device_opt_rename">Rename</string>
    <string name="device_opt_connect">Connect</string>
    <string name="device_opt_disconnect">Disconnect</string>
    <string name="device_opt_control">Control</string>
    <string name="device_opt_setwifi">Config WiFi</string>
    <string name="device_opt_remove">Remove</string>
    <string name="device_opt_433">433 add</string>
    <string name="device_opt_433_setting">433 control</string>
    <string name="device_opt_wake_up">Wake Up</string>
    <string name="device_opt_alarm">Alarm Push</string>
    <string name="device_opt_transcom">Serial</string>
    <string name="device_opt_play">Play</string>
    <string name="device_opt_stop">Stop</string>
    <string name="device_opt_capture">Capture</string>
    <string name="device_opt_record">Record</string>
    <string name="device_opt_fullscreen">Full</string>
    <string name="device_opt_fisheye_info">Info</string>
    <string name="device_opt_smallscreen">Small</string>
    <string name="device_opt_channel">Channel:</string>
    <string name="device_opt_on">Open</string>
    <string name="device_opt_off">Close</string>
    <string name="device_opt_timing">Timing</string>
    <string name="device_opt_auto">Automatic</string>
    <string name="device_opt_picture_list">Picture</string>
    <string name="device_opt_record_list">Record</string>
    <string name="devices_socket_item_open_time">open at 08：00</string>
    <string name="devices_socket_item_open_day">Mon,Tues,Wed</string>
    <string name="devices_socket_item_close_time">close at 19：00</string>
    <string name="devices_socket_item_close_day">Mon,Tues,Wed\nThur,Fri,Sat</string>
    <string name="device_pic_type_all">All</string>
    <string name="device_pic_type_alarm">Alarm</string>
    <string name="device_pic_type_manual">Remote control</string>
    <string name="setup_btn_left">Left</string>
    <string name="setup_btn_right">Right</string>
    <string name="setup_btn_up">Up</string>
    <string name="setup_btn_down">Down</string>
    <string name="setup_btn_menu">Menu</string>
    <string name="setup_btn_esc">Esc</string>
    <string name="get_device_state">Get device status</string>
    <string name="device_state">Device State:%s</string>
    <string name="wake_up_device">Wake up device</string>
    <string name="sleep_device">Sleep</string>
    <string name="start_get_yuv_data">Start Get Yuv Data</string>
    <string name="stop_get_yuv_data">Stop Get Yuv Data</string>
    <string name="start_save_yuv_data_to_file">Start Save Yuv Data File</string>
    <string name="yuv_data_to_bmp">Yuv Data into Image Display</string>
    <string name="low_power_dev">Low Power Device</string>
    <string name="save">Save</string>
    <string name="One_Key_Mask_Video">One Key Shading</string>
    <string name="Open_Shelter">Open Shelter</string>
</resources>