<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:uilib="http://schemas.android.com/apk/res-auto"
              android:id="@+id/layoutRoot"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.xm.ui.widget.XTitleBar
        android:id="@+id/one_key_shading_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/theme_color"
        uilib:LeftBtn_Nor="@drawable/icon_back_normal"
        uilib:LeftBtn_Sel="@drawable/icon_back_pressed"
        uilib:TitleText="@string/One_Key_Mask_Video"
        uilib:TitleTextColor="@color/white"
        uilib:RightText="@string/save"
        uilib:RightTextColor="@color/white"/>

    <com.xm.ui.widget.ListSelectItem
        android:id="@+id/open_shelter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        uilib:ImageRight1="@drawable/icon_checked_no"
        uilib:ImageRight2="@drawable/icon_checked_yes"
        uilib:ItemTitleColor="@color/login_page_color"
        uilib:LineColor="@color/line_color"
        uilib:ItemTipColor="@color/hint_color"
        uilib:Title="@string/Open_Shelter">
    </com.xm.ui.widget.ListSelectItem>
</LinearLayout>