<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/device_type"
            android:textColor="@drawable/common_desc_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtDevType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:textColor="@drawable/common_desc_color"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="10dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/device_mac"
            android:textColor="@drawable/common_desc_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtDevMac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:textColor="@drawable/common_desc_color"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="10dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/device_sn"
            android:textColor="@drawable/common_desc_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtDevSn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:textColor="@drawable/common_desc_color"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="10dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/device_ip"
            android:textColor="@drawable/common_desc_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtDevIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:textColor="@drawable/common_desc_color"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="10dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/device_staus_more"
            android:textColor="@drawable/common_desc_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtDevStatusMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:textColor="@drawable/common_desc_color"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="10dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnDevRename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/common_button_selector_blue"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/device_opt_rename"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnDevConnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/common_button_selector_blue"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/device_opt_connect"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnDevControl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/common_button_selector_blue"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/device_opt_control"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnDev433Add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/common_button_selector_red"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/device_opt_433"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnDevAlarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/common_button_selector_blue"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/device_opt_alarm"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnDevTransCom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/common_button_selector_blue"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/device_opt_transcom"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnDevRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/common_button_selector_red"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/device_opt_remove"
            android:textColor="@color/white"
            android:textSize="14dp" />
        
         <Button
            android:id="@+id/btnDev433_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/common_button_selector_red"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/device_opt_433_setting"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnDevWakeUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/common_button_selector_blue"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/low_power_dev"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llCloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cloud_unsupport"
                android:clickable="false"
                android:focusable="false"/>
            <TextView
                android:id="@+id/tvCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>